--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "todo-mindbox",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://komisant.github.io/mindbox-todos",
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
@@ -9,11 +10,11 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts  npm install npm run start",
+    "start": "npm install && react-scripts && npm run start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -42,6 +43,7 @@
     "@types/node": "^22.15.29",
     "@types/react": "^19.1.6",
     "@types/react-dom": "^19.1.5",
-    "typescript": "^5.8.3"
+    "gh-pages": "6.3.0",
+    "typescript": "^4.8.4"
   }
 }
